@@ -172,6 +172,10 @@ class MainWindow(object):
     def on_menuitem_bottom_activate(self, menuitem=None):
         self._jump_all_tabs_to_bottom()
 
+    def on_menuitem_clear_activate(self, menuitem=None):
+        for notebook in self.column.values():
+            notebook.clear_all_tabs()
+
     def on_menuitem_fullscreen_activate(self, menuitem):
         if menuitem.get_active():
             self.window.fullscreen()
@@ -272,6 +276,10 @@ class FeedNotebook(Gtk.Notebook):
     def jump_all_tabs_to_bottom(self, is_bottom=True):
         for feedview in self._get_all_feedviews():
             feedview.jump_to_bottom(is_bottom)
+
+    def clear_all_tabs(self):
+        for feedview in self._get_all_feedviews():
+            feedview.clear_buffer()
 
     def change_font(self, font, size):
         for feedview in self._get_all_feedviews():
