@@ -142,6 +142,16 @@
                       </object>
                     </child>
                     <child>
+                      <object class="GtkMenuItem" id="menuitem_clear">
+                        <property name="use_action_appearance">False</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">_Clear All Tabs</property>
+                        <property name="use_underline">True</property>
+                        <signal name="activate" handler="on_menuitem_clear_activate" swapped="no"/>
+                      </object>
+                    </child>
+                    <child>
                       <object class="GtkSeparatorMenuItem" id="menuitem5">
                         <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
